--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,12 +1,21 @@
-log4j.rootLogger=Debug, stdout, file
+log4j.rootLogger=ERROR, stdout, file
+
+log4j.logger.xmlErrorLogger=WARN, stdout, xml_file
+log4j.additivity.xmlErrorLogger=false
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.File=src/main/resources/log/log_file.log
-log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.appender.xml_file=org.apache.log4j.FileAppender
+log4j.appender.xml_file.File=src/main/resources/log/xml_problems.log
+log4j.appender.xml_file.Append=false
+log4j.appender.xml_file.layout=org.apache.log4j.PatternLayout
+log4j.appender.xml_file.layout.ConversionPattern=%d{HH:mm:ss:SSS} %-5p %c{1}:%L - %m%n
+
